--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(MyMod CXX)
+project(ModdingTest CXX)
 
 # Find latest version at https://github.com/OrfeasZ/ZHMModSDK/releases
 # Set ZHMMODSDK_DIR variable to a local directory to use a local copy of the ZHMModSDK.
@@ -10,27 +10,27 @@ include(cmake/setup-zhmmodsdk.cmake)
 # Set C++ standard to C++23.
 set(CMAKE_CXX_STANDARD 23)
 
-# Create the MyMod mod library.
-add_library(MyMod SHARED
-    src/MyMod.cpp
-    src/MyMod.h
+# Create the ModdingTest mod library.
+add_library(ModdingTest SHARED
+    src/ModdingTest.cpp
+    src/ModdingTest.h
 )
 
 # Set UTF-8 flag.
-set_target_properties(MyMod PROPERTIES COMPILE_FLAGS "/utf-8")
+set_target_properties(ModdingTest PROPERTIES COMPILE_FLAGS "/utf-8")
 
 # Add SDK and DX headers dependencies.
 find_package(directx-headers CONFIG REQUIRED)
 
-target_link_libraries(MyMod
+target_link_libraries(ModdingTest
     ZHMModSDK
     Microsoft::DirectX-Guids
     Microsoft::DirectX-Headers
 )
 
-install(TARGETS MyMod
+install(TARGETS ModdingTest
     RUNTIME DESTINATION bin
 )
 
 # Install the mod to the game folder when the `GAME_INSTALL_PATH` variable is set.
-zhmmodsdk_install(MyMod)
+zhmmodsdk_install(ModdingTest)
